--- a/Flutter/widget_of_the_week/web/index.html
+++ b/Flutter/widget_of_the_week/web/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>widget_of_the_week</title>
+    <meta charset="UTF-8">
+    <title>widget_of_the_week</title>
 </head>
 <body>
-  <script src="main.dart.js" type="application/javascript"></script>
+<div>Loading...</div>
+<script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
